--- a/static/main.css
+++ b/static/main.css
@@ -14,6 +14,10 @@
 	height: fit-content;
 }
 
+.btn.disabled{
+	pointer-events: none !important;
+}
+
 @media only screen and (max-width: 990px) {
 	.avatar .dropdown-menu {
 		left: 0;
